--- a/package.json
+++ b/package.json
@@ -3,7 +3,14 @@
   "version": "1.0.0",
   "description": "",
   "scripts": {
-    "dev": "parcel src/index.html"
+    "dev": "parcel index.html",
+    "start": "parcel index.html",
+    "build": "parcel build index.html",
+    "heroku-postbuild": "parcel build index.html"
+  },
+  "engines": {
+    "npm": "6.4.1",
+    "node": "10.15.3"
   },
   "keywords": [],
   "author": "Merve T",
@@ -11,7 +18,8 @@
   "dependencies": {
     "react": "^16.9.0",
     "react-dom": "^16.9.0",
-    "styled-components": "^4.3.2"
+    "styled-components": "^4.3.2",
+    "parcel-bundler": "^1.12.3"
   },
   "devDependencies": {
     "@types/react": "^16.9.2",
