--- a/package.json
+++ b/package.json
@@ -3,10 +3,10 @@
   "version": "1.0.0",
   "description": "",
   "scripts": {
-    "dev": "parcel index.html",
-    "start": "parcel index.html",
-    "build": "parcel build index.html",
-    "heroku-postbuild": "parcel build index.html"
+    "dev": "parcel src/index.html",
+    "start": "parcel src/index.html",
+    "build": "parcel build src/index.html",
+    "heroku-postbuild": "parcel build src/index.html"
   },
   "engines": {
     "npm": "6.4.1",
