--- a/package.json
+++ b/package.json
@@ -19,12 +19,11 @@
     "react": "^16.9.0",
     "react-dom": "^16.9.0",
     "styled-components": "^4.3.2",
+    "typescript": "^3.6.3",
     "parcel-bundler": "^1.12.3"
   },
   "devDependencies": {
     "@types/react": "^16.9.2",
-    "@types/react-dom": "^16.9.0",
-    "parcel-bundler": "^1.12.3",
-    "typescript": "^3.6.3"
+    "@types/react-dom": "^16.9.0"
   }
 }
