--- a/package.json
+++ b/package.json
@@ -1,29 +1,40 @@
 {
-  "name": "react-typescript",
-  "version": "1.0.0",
-  "description": "",
-  "scripts": {
-    "dev": "parcel src/index.html",
-    "start": "parcel src/index.html",
-    "build": "parcel build src/index.html",
-    "heroku-postbuild": "parcel build src/index.html"
-  },
-  "engines": {
-    "npm": "6.4.1",
-    "node": "10.15.3"
-  },
-  "keywords": [],
-  "author": "Merve T",
-  "license": "ISC",
+  "name": "earthwatchgp",
+  "version": "0.1.0",
+  "private": true,
   "dependencies": {
+    "@types/jest": "24.0.18",
+    "@types/node": "12.7.5",
+    "@types/react": "16.9.2",
+    "@types/react-dom": "16.9.0",
     "react": "^16.9.0",
     "react-dom": "^16.9.0",
-    "styled-components": "^4.3.2",
-    "typescript": "^3.6.3",
-    "parcel-bundler": "^1.12.3"
+    "react-scripts": "3.1.2",
+    "typescript": "3.6.3",
+    "styled-components": "^4.3.2"
+  },
+  "scripts": {
+    "start": "react-scripts start",
+    "build": "react-scripts build",
+    "test": "react-scripts test",
+    "eject": "react-scripts eject"
+  },
+  "eslintConfig": {
+    "extends": "react-app"
+  },
+  "browserslist": {
+    "production": [
+      ">0.2%",
+      "not dead",
+      "not op_mini all"
+    ],
+    "development": [
+      "last 1 chrome version",
+      "last 1 firefox version",
+      "last 1 safari version"
+    ]
   },
   "devDependencies": {
-    "@types/react": "^16.9.2",
-    "@types/react-dom": "^16.9.0"
+    "@types/styled-components": "^4.1.19"
   }
 }
