--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
     "react-dom": "^16.9.0",
     "react-scripts": "3.1.2",
     "typescript": "3.6.3",
-    "styled-components": "^4.3.2"
+    "styled-components": "^4.3.2",
+    "@types/styled-components": "^4.1.19"
+
   },
   "scripts": {
     "start": "react-scripts start",
@@ -33,8 +35,5 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  },
-  "devDependencies": {
-    "@types/styled-components": "^4.1.19"
   }
 }
