--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "react-scripts": "3.1.2",
     "typescript": "3.6.3",
     "styled-components": "^4.3.2",
-    "@types/styled-components": "^4.1.19"
+    "@types/styled-components": "^4.1.19",
+    "worker-timers": "^5.0.29"
   },
   "scripts": {
     "start": "react-scripts start",
